--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
         <scope>system</scope>
         <systemPath>${basedir}/libs/BitcoinjBIP44.jar</systemPath>
     </dependency>
+	   <dependency>
+		   <groupId>junit</groupId>
+		   <artifactId>junit</artifactId>
+		   <version>4.12</version>
+	   </dependency>
      </dependencies>
 
 </project>
