Jar will build to known SHA1 hash every time if source has not been modified- leaving only the compiler as the variant.

--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>info.blockchain.wallet</groupId>
 	<artifactId>MyWalletHD</artifactId>
+	<version>2.0</version>
 	<packaging>jar</packaging>
-	<version>2.0-SNAPSHOT</version>
+
 	<name>MyWalletHD</name>
-	<url>http://maven.apache.org</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+	<url>https://github.com/blockchain/My-Wallet-V3-jar</url>
 
 	<build>
 		<!-- Over ride output file name -->
@@ -17,36 +22,65 @@
 
 		<plugins>
 
+			<!-- Deterministic build -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<downloadSources>true</downloadSources>
-					<downloadJavadocs>false</downloadJavadocs>
-				</configuration>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>1-touch-classes</id>
+						<phase>prepare-package</phase>
+						<configuration>
+							<target>
+								<touch datetime="01/01/2000 00:10:00 am">
+									<fileset dir="target/classes"/>
+								</touch>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.1</version>
 				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
+					<descriptors>
+						<descriptor>src/main/assembly/zip.xml</descriptor>
+					</descriptors>
 				</configuration>
+				<executions>
+					<execution>
+						<id>2-make-assembly</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
-			<!-- Make this jar executable -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<excludes>
-						<exclude>**/Main*</exclude>
-					</excludes>
-				</configuration>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>3-rename-assembly</id>
+						<phase>package</phase>
+						<configuration>
+							<target>
+								<move file="${project.build.directory}/${project.build.finalName}-deterministic.zip"
+									  tofile="${project.build.directory}/${project.build.finalName}-deterministic.jar"/>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
@@ -57,7 +91,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -106,11 +140,6 @@
 			<version>0.13.2</version>
 			<scope>system</scope>
 			<systemPath>${basedir}/libs/BitcoinjBIP44.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
