--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
 			<version>1.3</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
