chore(Travis): Set only on master branch and pull requests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ sudo: required
 jdk:
   - oraclejdk8
 
+# Build all pushes to master & pull requests
+branches:
+  only:
+    - master
+
 script:
   - mvn clean verify
 
