--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
             <version>1.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
     </dependencies>
 
 </project>
