--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
             <artifactId>okio</artifactId>
             <version>1.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>3.3.1</version>
+        </dependency>
 
 
         <!-- Tests -->
