--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-log/
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+# Intellij
 .idea/
-out/
 *.iml
-src/main/java/META-INF/
+*.iws
 
 # Java class files
 *.class
@@ -22,3 +12,8 @@ build/
 
 # Mac OS X clutter
 *.DS_Store
+
+log/
+target/
+src/main/java/META-INF/
+classes/
