--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
-apply plugin: 'java'
-apply plugin: 'maven'
+plugins {
+    id 'java'
+    id 'maven'
+    id 'jacoco'
+    id "com.github.kt3k.coveralls" version "2.7.1"
+}
 
 group = 'info.blockchain.wallet'
 version = '6.1.40'
@@ -13,12 +17,16 @@ tasks.withType(JavaCompile) {
 
 repositories {
 
-    maven {
-        url nexusUrl + '/repository/maven-public/'
-        credentials(PasswordCredentials) {
-            username nexusUsername
-            password nexusPassword
+    if (hasProperty('nexusUrl')) {
+        maven {
+            url nexusUrl + '/repository/maven-public/'
+            credentials(PasswordCredentials) {
+                username nexusUsername
+                password nexusPassword
+            }
         }
+    } else {
+        mavenCentral()
     }
 }
 
@@ -40,4 +48,11 @@ dependencies {
     compile group: 'com.squareup.okio', name: 'okio', version:'1.11.0'
     compile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
     testCompile group: 'junit', name: 'junit', version:'4.12'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
 }
