--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,22 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
+    options.encoding = 'UTF-8'
+}
+
+task sourcesJar(type: Jar, dependsOn:classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn:javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
 
 repositories {
@@ -31,23 +46,23 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.bitcoinj', name: 'bitcoinj-core', version:'0.13.1'
-    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.21'
-    compile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.5'
-    compile group: 'commons-io', name: 'commons-io', version:'2.4'
-    compile group: 'commons-cli', name: 'commons-cli', version:'1.3'
-    compile group: 'commons-codec', name: 'commons-codec', version:'1.4'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.4'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.2'
-    compile group: 'org.json', name: 'json', version:'20160810'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.8.5'
-    compile group: 'com.squareup.retrofit2', name: 'retrofit', version:'2.1.0'
-    compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version:'2.1.0'
-    compile group: 'com.squareup.okhttp3', name: 'logging-interceptor', version:'3.3.1'
-    compile group: 'io.jsonwebtoken', name: 'jjwt', version:'0.6.0'
-    compile group: 'com.squareup.okio', name: 'okio', version:'1.11.0'
-    compile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
-    testCompile group: 'junit', name: 'junit', version:'4.12'
+    compile group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.13.1'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
+    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.5'
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.3'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.4'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
+    compile group: 'org.json', name: 'json', version: '20160810'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.1.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.1.0'
+    compile group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.3.1'
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
+    compile group: 'com.squareup.okio', name: 'okio', version: '1.11.0'
+    compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 jacocoTestReport {
