--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.4'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
+    compile group: 'io.mikael', name: 'urlbuilder', version: '2.0.8'
     compile group: 'org.json', name: 'json', version: '20160810'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.1.0'
