--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
-group = 'info.blockchain'
-version = PROJECT_VERSION
-
 plugins {
     id 'java'
     id 'maven'
     id 'jacoco'
     id "com.github.kt3k.coveralls" version "2.7.1"
 }
+
+group = 'info.blockchain'
+version = PROJECT_VERSION
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -53,18 +53,12 @@ task sourcesJar(type: Jar, dependsOn:classes) {
     from sourceSets.main.allSource
 }
 
-task javadocJar(type: Jar, dependsOn:javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
 artifacts {
     archives sourcesJar
-    archives javadocJar
 }
 
-
 dependencies {
+    compile group: 'info.blockchain', name: 'api-client', version: '0.1.2-SNAPSHOT'
     compile group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.13.1'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.5'
