--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.5'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3'
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.4'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.3'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile group: 'io.mikael', name: 'urlbuilder', version: '2.0.8'
     compile group: 'org.json', name: 'json', version: '20160810'
@@ -108,7 +108,7 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '23.5-android'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 jacocoTestReport {
